cmake_minimum_required(VERSION 3.6)
project(igniter-bins)
set(CMAKE_CXX_STANDARD 11)
add_executable(libtrojan.so
    trojan/src/authenticator.cpp
    trojan/src/clientsession.cpp
    trojan/src/config.cpp
    trojan/src/forwardsession.cpp
    trojan/src/log.cpp
    trojan/src/main.cpp
    trojan/src/serversession.cpp
    trojan/src/service.cpp
    trojan/src/session.cpp
    trojan/src/socks5address.cpp
    trojan/src/ssldefaults.cpp
    trojan/src/sslsession.cpp
    trojan/src/trojanrequest.cpp
    trojan/src/udppacket.cpp
    trojan/src/version.cpp)
find_package(Threads REQUIRED)
target_link_libraries(libtrojan.so ${CMAKE_THREAD_LIBS_INIT})
target_include_directories(libtrojan.so PRIVATE ${CMAKE_SOURCE_DIR}/libs/include)
target_link_libraries(libtrojan.so
    ${CMAKE_SOURCE_DIR}/libs/lib/libboost_program_options.a
    ${CMAKE_SOURCE_DIR}/libs/lib/libboost_system.a
    ${CMAKE_SOURCE_DIR}/libs/lib/libssl.a
    ${CMAKE_SOURCE_DIR}/libs/lib/libcrypto.a)
add_executable(libtun2socks.so
    tun2socks/base/BLog_syslog.c
    tun2socks/system/BReactor_badvpn.c
    tun2socks/system/BSignal.c
    tun2socks/system/BConnection_common.c
    tun2socks/system/BConnection_unix.c
    tun2socks/system/BTime.c
    tun2socks/system/BUnixSignal.c
    tun2socks/system/BNetwork.c
    tun2socks/flow/StreamRecvInterface.c
    tun2socks/flow/PacketRecvInterface.c
    tun2socks/flow/PacketPassInterface.c
    tun2socks/flow/StreamPassInterface.c
    tun2socks/flow/SinglePacketBuffer.c
    tun2socks/flow/BufferWriter.c
    tun2socks/flow/PacketBuffer.c
    tun2socks/flow/PacketStreamSender.c
    tun2socks/flow/PacketPassConnector.c
    tun2socks/flow/PacketProtoFlow.c
    tun2socks/flow/PacketPassFairQueue.c
    tun2socks/flow/PacketProtoEncoder.c
    tun2socks/flow/PacketProtoDecoder.c
    tun2socks/socksclient/BSocksClient.c
    tun2socks/tuntap/BTap.c
    tun2socks/lwip/src/core/timers.c
    tun2socks/lwip/src/core/udp.c
    tun2socks/lwip/src/core/memp.c
    tun2socks/lwip/src/core/init.c
    tun2socks/lwip/src/core/pbuf.c
    tun2socks/lwip/src/core/tcp.c
    tun2socks/lwip/src/core/tcp_out.c
    tun2socks/lwip/src/core/netif.c
    tun2socks/lwip/src/core/def.c
    tun2socks/lwip/src/core/mem.c
    tun2socks/lwip/src/core/tcp_in.c
    tun2socks/lwip/src/core/stats.c
    tun2socks/lwip/src/core/inet_chksum.c
    tun2socks/lwip/src/core/ipv4/icmp.c
    tun2socks/lwip/src/core/ipv4/igmp.c
    tun2socks/lwip/src/core/ipv4/ip4_addr.c
    tun2socks/lwip/src/core/ipv4/ip_frag.c
    tun2socks/lwip/src/core/ipv4/ip4.c
    tun2socks/lwip/src/core/ipv4/autoip.c
    tun2socks/lwip/src/core/ipv6/ethip6.c
    tun2socks/lwip/src/core/ipv6/inet6.c
    tun2socks/lwip/src/core/ipv6/ip6_addr.c
    tun2socks/lwip/src/core/ipv6/mld6.c
    tun2socks/lwip/src/core/ipv6/dhcp6.c
    tun2socks/lwip/src/core/ipv6/icmp6.c
    tun2socks/lwip/src/core/ipv6/ip6.c
    tun2socks/lwip/src/core/ipv6/ip6_frag.c
    tun2socks/lwip/src/core/ipv6/nd6.c
    tun2socks/lwip/custom/sys.c
    tun2socks/tun2socks/tun2socks.c
    tun2socks/base/DebugObject.c
    tun2socks/base/BLog.c
    tun2socks/base/BPending.c
    tun2socks/system/BDatagram_unix.c
    tun2socks/flowextra/PacketPassInactivityMonitor.c
    tun2socks/tun2socks/SocksUdpGwClient.c
    tun2socks/udpgw_client/UdpGwClient.c
    libancillary/fd_recv.c)
target_include_directories(libtun2socks.so PRIVATE
    ${CMAKE_SOURCE_DIR}/libancillary
    ${CMAKE_SOURCE_DIR}/tun2socks/lwip/src/include/ipv4
    ${CMAKE_SOURCE_DIR}/tun2socks/lwip/src/include/ipv6
    ${CMAKE_SOURCE_DIR}/tun2socks/lwip/src/include
    ${CMAKE_SOURCE_DIR}/tun2socks/lwip/custom
    ${CMAKE_SOURCE_DIR}/tun2socks)
target_link_libraries(libtun2socks.so dl log)
target_compile_definitions(libtun2socks.so PRIVATE
    -DBADVPN_THREADWORK_USE_PTHREAD
    -DBADVPN_LINUX
    -DBADVPN_BREACTOR_BADVPN
    -D_GNU_SOURCE
    -DBADVPN_USE_SIGNALFD
    -DBADVPN_USE_EPOLL
    -DBADVPN_LITTLE_ENDIAN
    -DBADVPN_THREAD_SAFE
    -DANDROID)
